examples/examples/dynamic_iteration/snapshots/dynamic_iteration__tests____test_counters-2.snap
---
source: examples/examples/dynamic_iteration/tests.rs
expression: harness.terminal().backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 30, height: 10 },
    content: [
        "╭────────────────────────────╮",
        "│         Add Counter        │",
        "╰────────────────────────────╯",
        " ╭────╮╭────╮╭───╮            ",
        " │ -1 ││ +1 ││ x │ count: 1   ",
        " ╰────╯╰────╯╰───╯            ",
        " ╭────╮╭────╮╭───╮            ",
        " │ -1 ││ +1 ││ x │ count: 0   ",
        " ╰────╯╰────╯╰───╯            ",
        "                              ",
    ],
    styles: [
        x: 0, y: 0, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 1, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 3, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 3, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 4, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 4, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 4, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 4, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 4, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 4, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 26, y: 4, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 5, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 5, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 7, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 7, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 7, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 7, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 26, y: 7, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
