examples/examples/dynamic_iteration/snapshots/dynamic_iteration__tests____test_counters-3.snap
---
source: examples/examples/dynamic_iteration/tests.rs
expression: harness.buffer()
snapshot_kind: text
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 20 },
    content: [
        "╭───────────╮                           ",
        "│Add Counter│                           ",
        "╰───────────╯                           ",
        "                                        ",
        "  0. count: 1                           ",
        "                                        ",
        "                                        ",
        "  1. count: 0                           ",
        "                                        ",
        "                                        ",
        "                                        ",
        "                                        ",
        "                                        ",
        "                                        ",
        "                                        ",
        "                                        ",
        "                                        ",
        "                                        ",
        "                                        ",
        "                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 1, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 12, y: 4, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 12, y: 7, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
